--- a/website/docs/cloud-docs/api-docs/changelog.mdx
+++ b/website/docs/cloud-docs/api-docs/changelog.mdx
@@ -9,6 +9,10 @@ description: >-
 
 Keep track of changes to the API for Terraform Cloud and Terraform Enterprise.
 
+## 2024-02-20
+* Add a `sort` parameter to the [Projects list API](/terraform/cloud-docs/api-docs/projects#query-parameters) to allow sorting projects by name.
+* Add a `description` attribute to the [Projects API](/terraform/cloud-docs/api-docs/projects).
+
 ## 2024-2-8
 * Add [Explorer API documentation](/terraform/cloud-docs/api-docs/explorer)
 
